--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
 body {
-  font-family: arial, helvetica;
+  font-family: "Nunito", sans-serif;
   font-size: 16px;
   margin: 0;
   background-color: #ffffff;
+}
+
+.tippy-tippy-brand {
+  font-family: "Pacifico", cursive;
+  font-size: 24px;
+  color: #ffffff;
+  text-decoration: none;
 }
 #avatar {
   position: relative !important;
@@ -96,12 +103,10 @@ body {
   border: 1px solid #707070;
   cursor: pointer;
   border-radius: 10px;
-  background-color: #ffdbb4;
 }
 
 .eyebrows,
 .hairstyles,
-.clothes,
 .glasses,
 .tattoos,
 .accessories {
