--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@ body {
   font-size: 16px;
   margin: 0;
   background-color: #ffffff;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 .tippy-tippy-brand {
